--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
 </head>
 <body>
     <div class="wrapper">
+        <!-- header with code logo links to w3 schools and links to navigate the page -->
         <header>
+            <!-- code logo -->
             <img src="images/icons8-code-50-2.png" alt="code icon" class="code-logo">
             <div class="symbols">
-                <h3>Web Developer</h3>
-                <a href="https://www.w3schools.com/js/default.asp" target="_blank" rel="noopener"><img src="images/icons8-javascript-50.png" class="js"></a>
-                <a href="https://www.w3schools.com/html/default.asp" target="_blank" rel="noopener"><img src="images/html-bw.png" class="html"></a>
-                <a href="https://www.w3schools.com/css/default.asp" target="_blank" rel="noopener"><img src="images/icons8-css3-50.png" class="css"></a>
+                <h1>Web Developer</h1>
+                <!-- front end development icons that link to w3 schools -->
+                <a href="https://www.w3schools.com/js/default.asp" target="_blank" rel="noopener"><img src="images/icons8-javascript-50.png" alt="javascript-logo" class="js"></a>
+                <a href="https://www.w3schools.com/html/default.asp" target="_blank" rel="noopener"><img src="images/html-red.png" alt="html-logo" class="html"></a>
+                <a href="https://www.w3schools.com/css/default.asp" target="_blank" rel="noopener"><img src="images/icons8-css3-50.png" alt="css-logo" class="css"></a>
             </div>
+            <!-- navigation to the intro about and contact section -->
             <div class="navi"> 
                 <nav>
                     <a href="#intro">Intro</a>
@@ -26,15 +30,20 @@
             </div>
         </header>
     <main>
-        <img src="images/portfolio.jpeg" alt="photo of developer"class="portfolio">
+        <!-- portfolio image -->
+        <img src="images/portfolio.jpeg" alt="photo of developer" class="portfolio">
         <hr>
         <div  id="intro">
+            <!-- Intoductory & mission statement section to the developer  -->
             <section>
-                <h3>Intro</h3>
+                <h2>Intro</h2>
                 <p>"Hello World" I Am Mark Gee</p>
-                    I live in San Rafael, near San Francisco California and I am a Software Engineer.
-                    Being a new resident in the Bay Area, I am drown to and inspire by the tech industry.<br>
-                    As a Software Engineer my mission is to: </p>
+                    <p>
+                        I live in San Rafael, near San Francisco California and I am a Software Engineer.
+                        Being a new resident in the Bay Area, I am drown to and inspire by the tech industry.
+                        <br>
+                        As a Software Engineer my mission is to: 
+                    </p>
                 <ul>
                     <li>Collaborate with other developers.</li>
                     <li>Develop websites and apps that benefit all.</li>
@@ -45,14 +54,18 @@
         </div>
             
         <div id="about">
+            <!-- Details about the developer work history, interest and hobbies -->
             <section>
-                <h3>About</h3>
+                <h2>About</h2>
                 <p>
                    As a telecom professional, I have enjoyed connecting people with entertainment, 
                    telephone and data tools for business and personal needs.  After completing Computer 
                    Science courses while attending college in San Francisco I developed a desire to
                    create maintable websites. I enjoy working and learning from Software Engineering
-                   Professionals.
+                   Professionals. Outside of programming, I enjoy hiking and camping the many California
+                   trails of Marin County, San Francisco, Lake Tahoe and Southern California. I also enjoy 
+                   most outdoor sports (golfing, swimming, tennis, fishing...) and the occasional night life
+                   of karaoke and drinking.
                 </p>
                 <p>
                    I look forward to working with a team/s to solve complex technical problems to deliver
@@ -61,14 +74,14 @@
             </section>
         </div>
     </main>
-
+<!-- footer with contact info -->
     <div class="footer">
         <footer>
             <div id="contact" class="social">
-                <h4>Contact</h4>
-                <a href="mailto:moel55.mg@gmail.com" target="_blank" rel="noopener"><img src="images/google.png" alt="gmail" class="fa fa-google"></img></a>
-                <a href="https://www.linkedin.com/in/marcusgillespie/" target="_blank" rel="noopener"><img src="images/linkedIn-blue.png" alt="linked in" class="fa fa-linkedin"></img></a>
-                <a href="https://github.com/Moel55" target="_blank" rel="noopener"><img src="images/github.png" alt="github" class="fa fa-github"></img></a>
+                <h3>Contact</h3>
+                <a href="mailto:moel55.mg@gmail.com" target="_blank" rel="noopener"><img src="images/google.png" alt="gmail" class="fa fa-google"></a>
+                <a href="https://www.linkedin.com/in/marcusgillespie/" target="_blank" rel="noopener"><img src="images/linkedIn-blue.png" alt="linked in" class="fa fa-linkedin"></a>
+                <a href="https://github.com/Moel55" target="_blank" rel="noopener"><img src="images/github.png" alt="github" class="fa fa-github"></a>
             </div>
         </footer>
     </div>
