--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                 <p>
                    As a telecom professional, I have enjoyed connecting people with entertainment, 
                    telephone and data tools for business and personal needs.  After completing Computer 
-                   Science courses while attending college in San Francisco I developed a desire to
-                   create maintable websites. I enjoy working and learning from Software Engineering
+                   Science courses while attending college in San Francisco, I developed a desire to
+                   create maintainable websites. I enjoy working and learning from Software Engineering
                    Professionals. Outside of programming, I enjoy hiking and camping the many California
                    trails of Marin County, San Francisco, Lake Tahoe and Southern California. I also enjoy 
                    most outdoor sports (golfing, swimming, tennis, fishing...) and the occasional night life
